@@ -10,6 +10,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- B.Moody: "If TiLP detects a cable, but no calculator is connected, then the cable
 		will not be uninitialized properly before being reinitialized.  The result
 		is that TiLP attempts to open the cable twice." -> patch merged.
+	- updates dirlist & memory when sending apps
 
 - 09/06/2006, version 0.15 (0.1.1, 0.2.0, 0.1.5, 0.0.3): roms
 	- use reworked dirlist API
